--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:text="text"
+        android:text="tex2t"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
