--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -28,10 +28,13 @@
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-                <ImageView
-                    android:src="@android:color/holo_green_light"
-                    android:layout_width="200dp"
-                    android:layout_height="30dp"/>
+                <TextView
+                    android:text="길거리 먹깨비"
+                    android:textColor="#fff"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
             <ImageView
                 android:src="@android:color/holo_blue_bright"
