--- a/app/src/main/res/layout/activity_muckpot.xml
+++ b/app/src/main/res/layout/activity_muckpot.xml
@@ -1,84 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Muckpot">
 
-    <LinearLayout
-        android:layout_margin="15dp"
-        android:gravity="center"
-        android:orientation="horizontal"
+    <!--툴바 영역 시작-->
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="120dp">
-
-        <ImageView
-            android:src="@drawable/ic_launcher_background"
-            android:layout_width="100dp"
-            android:layout_height="100dp"/>
+        android:layout_height="50dp"
+        android:background="#FF9800">
 
         <LinearLayout
+            android:layout_marginRight="15dp"
             android:gravity="center_vertical"
-            android:layout_marginLeft="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <ImageView
+                android:src="@android:color/holo_blue_bright"
+                android:layout_width="30dp"
+                android:layout_height="30dp"/>
+            <LinearLayout
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:text="길거리 먹깨비"
+                    android:textColor="#fff"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <ImageView
+                android:src="@android:color/holo_blue_bright"
+                android:layout_width="30dp"
+                android:layout_height="30dp"/>
+            <ImageView
+                android:layout_marginLeft="5dp"
+                android:src="@android:color/holo_blue_bright"
+                android:layout_width="30dp"
+                android:layout_height="30dp"/>
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
+                android:layout_margin="15dp"
+                android:gravity="center"
                 android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:text="제목"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:text="시간"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-
-            <TextView
-                android:layout_marginTop="18dp"
-                android:layout_marginBottom="18dp"
-                android:text="내용"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:text="위치"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <View
-                    android:layout_weight="10"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"/>
+                android:layout_width="match_parent"
+                android:layout_height="120dp">
 
                 <ImageView
+                    android:id="@+id/MuckImg"
                     android:src="@drawable/ic_launcher_background"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"/>
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
 
-                <View
-                    android:layout_weight="0.4"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"/>
+                <LinearLayout
+                    android:gravity="center_vertical"
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <TextView
-                    android:text="1/5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/MuckTitle"
+                            android:textSize="18dp"
+                            android:text="제목"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                        <TextView
+                            android:id="@+id/MuckTime"
+                            android:textSize="13dp"
+                            android:text="시간"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/MuckTextPreview"
+                        android:textSize="15dp"
+                        android:layout_marginTop="18dp"
+                        android:layout_marginBottom="18dp"
+                        android:text="내용"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/MuckLocation"
+                            android:textSize="13dp"
+                            android:text="위치"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                        <View
+                            android:layout_weight="10"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"/>
+
+                        <ImageView
+                            android:src="@drawable/ic_launcher_background"
+                            android:layout_width="17dp"
+                            android:layout_height="17dp"/>
+
+                        <View
+                            android:layout_weight="0.4"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"/>
+
+                        <TextView
+                            android:id="@+id/MuckTotalMember"
+                            android:textSize="13dp"
+                            android:text="1/5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
