--- a/app/src/main/res/layout/activity_muckpot.xml
+++ b/app/src/main/res/layout/activity_muckpot.xml
@@ -19,15 +19,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+
             <ImageView
                 android:src="@android:color/holo_blue_bright"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
+
             <LinearLayout
                 android:gravity="center"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
                 <TextView
                     android:text="길거리 먹깨비"
                     android:textColor="#fff"
@@ -36,10 +39,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
+
             <ImageView
                 android:src="@android:color/holo_blue_bright"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
+
             <ImageView
                 android:layout_marginLeft="5dp"
                 android:src="@android:color/holo_blue_bright"
@@ -48,15 +53,18 @@
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
+    <!--컨텐츠 영역 시작-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- 리스트 전체 레이아웃 -->
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!-- 한 개의 먹팟 레이아웃 -->
             <LinearLayout
                 android:layout_margin="15dp"
                 android:gravity="center"
@@ -64,12 +72,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="120dp">
 
+                <!-- 먹팟 썸네일 이미지 -->
                 <ImageView
                     android:id="@+id/MuckImg"
                     android:src="@drawable/ic_launcher_background"
                     android:layout_width="100dp"
                     android:layout_height="100dp"/>
 
+                <!-- 텍스트 전체 레이아웃 -->
                 <LinearLayout
                     android:gravity="center_vertical"
                     android:layout_marginLeft="20dp"
@@ -77,6 +87,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
+                    <!-- 제목 라인 레이아웃 -->
                     <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="wrap_content"
@@ -97,6 +108,7 @@
                             android:layout_height="wrap_content"/>
                     </LinearLayout>
 
+                    <!-- 내용 미리보기 -->
                     <TextView
                         android:id="@+id/MuckTextPreview"
                         android:textSize="15dp"
@@ -106,6 +118,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
+                    <!-- 위치 라인 레이아웃 -->
                     <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="wrap_content"
@@ -142,7 +155,13 @@
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+
+            <!-- 구분선 -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_centerInParent="true"
+                android:background="#AFAFAF"/>
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
