--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -8,6 +8,7 @@
 
     <!--툴바 영역 시작-->
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#FF9800">
@@ -43,18 +44,14 @@
                 android:src="@android:color/holo_blue_bright"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
-
-            <ImageView
-                android:layout_marginLeft="5dp"
-                android:src="@android:color/holo_blue_bright"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
     <!--툴바 영역 끝-->
 
-    <fragment android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <fragment
         android:id="@+id/map"
-        android:name="com.naver.maps.map.MapFragment" />
+        android:layout_below="@+id/toolbar"
+        android:name="com.naver.maps.map.MapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
