--- a/app/src/main/res/layout/activity_muckpot_detail.xml
+++ b/app/src/main/res/layout/activity_muckpot_detail.xml
@@ -145,7 +145,9 @@
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
             </LinearLayout>
+            <!-- 컨텐츠 영역 끝 -->
 
+            <!-- 참여자 영역 시작 -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -181,7 +183,7 @@
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
 
-                <!--프로필 영역-->
+                <!-- 댓글 영역 -->
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -189,6 +191,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:layout_gravity="top"
                         android:id="@+id/muck_Commentprofilepic"
                         android:layout_weight="0"
                         android:layout_width="50dp"
@@ -203,6 +206,7 @@
                         android:orientation="vertical">
 
                         <LinearLayout
+                            android:layout_gravity="top"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
@@ -223,16 +227,9 @@
                                 android:textSize="15dp" />
                         </LinearLayout>
 
+                        <!-- 댓글 텍스트 영역 -->
                         <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="5dp"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal">
-
-                        </LinearLayout>
-
-                        <LinearLayout
+                            android:layout_marginTop="7dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
@@ -240,7 +237,7 @@
 
                             <TextView
                                 android:textSize="15dp"
-                                android:text="댓글이다ㅏㅏㅏㅏㅏㅏㅏㅏ"
+                                android:text="댓글이다ㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏ"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"/>
                         </LinearLayout>
