--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -8,7 +8,7 @@
 
     <!--툴바 영역 시작-->
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/map_Toolbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#FF9800">
@@ -32,6 +32,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/map_ToolbarText"
                     android:text="길거리 먹깨비"
                     android:textColor="#fff"
                     android:textSize="24dp"
@@ -50,7 +51,7 @@
 
     <fragment
         android:id="@+id/map"
-        android:layout_below="@+id/toolbar"
+        android:layout_below="@+id/map_Toolbar"
         android:name="com.naver.maps.map.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
