--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".MainActivity">
 
     <com.kakao.usermgmt.LoginButton
         android:id="@+id/login_btn_kakaologin"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="50dp" />
+
+    <Button
+        android:id="@+id/Login_home"
+        android:text="홈으로 이동"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
