--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,18 @@
 
     <com.kakao.usermgmt.LoginButton
         android:id="@+id/login_btn_kakaologin"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="50dp" />
+
+    <Button
+        android:id="@+id/btn_logout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="카카오 로그아웃" />
 
     <Button
         android:id="@+id/Login_home"
         android:text="홈으로 이동"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
