--- a/app/src/main/res/layout/activity_muckpot_detail.xml
+++ b/app/src/main/res/layout/activity_muckpot_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Muckpot_Detail">
+    tools:context=".MuckpotDetail">
 
     <!--툴바 영역 시작-->
     <androidx.appcompat.widget.Toolbar
