--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,55 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#ffb452">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/font_rfg"
+        android:text="길거리 먹깨비"
+        android:textSize="50dp"
+        android:textAlignment="center"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"/>
 
     <com.kakao.usermgmt.LoginButton
         android:id="@+id/login_btn_kakaologin"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_width="350dp"
+        android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btn_logout"
+    <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="15dp"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="카카오 로그아웃" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/Login_home"
-        android:text="홈으로 이동"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btn_logout"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="카카오 로그아웃" />
+
+        <Button
+            android:id="@+id/Login_home"
+            android:text="홈으로 이동"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 </LinearLayout>
