--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -26,7 +26,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:src="@android:color/holo_blue_bright"
+                    android:id="@+id/feed_profileImg"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/profile_default"/>
+
+                <ImageView
+                    android:src="@android:color/transparent"
                     android:layout_width="30dp"
                     android:layout_height="30dp"/>
                 <LinearLayout
@@ -44,14 +50,14 @@
                 </LinearLayout>
 
                 <ImageView
-                    android:src="@android:color/holo_blue_bright"
+                    android:src="@drawable/sort"
                     android:layout_width="30dp"
                     android:layout_height="30dp"/>
                 <ImageView
                     android:layout_marginLeft="5dp"
-                    android:src="@android:color/holo_blue_bright"
+                    android:src="@drawable/alert"
                     android:layout_width="30dp"
-                    android:layout_height="30dp"/>
+                    android:layout_height="25dp"/>
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
         <!--툴바 영역 끝-->
@@ -86,7 +92,7 @@
                             android:layout_weight="0"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
-                            android:src="@android:color/holo_blue_bright" />
+                            android:src="@drawable/profile_default" />
 
                         <LinearLayout
                             android:layout_width="fill_parent"
@@ -123,7 +129,7 @@
                                 <ImageView
                                     android:layout_width="15dp"
                                     android:layout_height="15dp"
-                                    android:src="@android:color/holo_orange_dark" />
+                                    android:src="@drawable/location" />
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -176,7 +182,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
                             <ImageView
-                                android:src="@android:color/holo_orange_light"
+                                android:src="@drawable/replies"
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"/>
                             <TextView
@@ -193,7 +199,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
                             <ImageView
-                                android:src="@android:color/holo_orange_light"
+                                android:src="@drawable/likes"
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"/>
                             <TextView
@@ -210,7 +216,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
                             <ImageView
-                                android:src="@android:color/holo_orange_light"
+                                android:src="@drawable/pictures"
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"/>
                             <TextView
@@ -225,7 +231,7 @@
                             android:layout_height="0dp"
                             android:layout_weight="1"/>
                         <ImageView
-                            android:src="@android:color/holo_green_light"
+                            android:src="@drawable/bookmark"
                             android:layout_width="25dp"
                             android:layout_height="25dp"/>
                     </LinearLayout>
