--- a/app/src/main/res/layout/activity_feed_write.xml
+++ b/app/src/main/res/layout/activity_feed_write.xml
@@ -77,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:src="@android:color/holo_blue_bright"
+                    android:src="@drawable/location"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_marginRight="5dp"/>
