--- a/app/src/main/res/layout/activity_muckpot.xml
+++ b/app/src/main/res/layout/activity_muckpot.xml
@@ -26,7 +26,12 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:src="@android:color/holo_blue_bright"
+                    android:src="@drawable/profile_default"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"/>
+
+                <ImageView
+                    android:src="@android:color/transparent"
                     android:layout_width="30dp"
                     android:layout_height="30dp"/>
 
@@ -46,15 +51,15 @@
                 </LinearLayout>
 
                 <ImageView
-                    android:src="@android:color/holo_blue_bright"
+                    android:src="@drawable/search"
                     android:layout_width="30dp"
-                    android:layout_height="30dp"/>
+                    android:layout_height="22dp"/>
 
                 <ImageView
                     android:layout_marginLeft="5dp"
-                    android:src="@android:color/holo_blue_bright"
+                    android:src="@drawable/alert"
                     android:layout_width="30dp"
-                    android:layout_height="30dp"/>
+                    android:layout_height="25dp"/>
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
@@ -69,54 +74,54 @@
                 android:id="@+id/muck_list"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:padding="20dp">
 
                 <!-- 한 개의 먹팟 레이아웃 -->
                 <LinearLayout
-                    android:layout_marginHorizontal="10dp"
-                    android:gravity="center"
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="130dp">
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
                     <!-- 먹팟 썸네일 이미지 -->
                     <ImageView
                         android:id="@+id/muck_Img"
-                        android:src="@drawable/ic_launcher_background"
                         android:layout_width="110dp"
-                        android:layout_height="110dp"/>
+                        android:layout_height="110dp"
+                        android:src="@drawable/ic_launcher_background" />
 
                     <!-- 텍스트 전체 레이아웃 -->
                     <LinearLayout
-                        android:layout_marginVertical="10dp"
-                        android:paddingTop="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
                         android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:paddingTop="5dp">
 
                         <!-- 제목 라인 레이아웃 -->
                         <LinearLayout
-                            android:layout_gravity="top"
-                            android:orientation="horizontal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="5dp">
+                            android:layout_gravity="top"
+                            android:layout_marginBottom="5dp"
+                            android:orientation="horizontal">
+
                             <TextView
                                 android:id="@+id/muck_Title"
-                                android:textSize="20dp"
-                                android:text="제목"
-                                android:textStyle="bold"
-                                android:layout_marginRight="7dp"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"/>
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="7dp"
+                                android:text="제목"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/muck_Time"
-                                android:textSize="14dp"
-                                android:text="게시시간"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"/>
+                                android:layout_height="wrap_content"
+                                android:text="게시시간"
+                                android:textSize="14dp" />
                         </LinearLayout>
 
                         <!-- 내용 미리보기 -->
@@ -124,26 +129,29 @@
                             android:layout_width="wrap_content"
                             android:layout_height="50dp"
                             android:layout_marginBottom="5dp">
+
                             <TextView
                                 android:id="@+id/muck_TextPreview"
-                                android:textSize="15dp"
-                                android:text="내용내용내용내용내용내용내용내용내용내용내용내용"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"/>
+                                android:layout_height="wrap_content"
+                                android:text="내용내용내용내용내용내용내용내용내용내용내용내용"
+                                android:textSize="15dp" />
                         </LinearLayout>
 
                         <!-- 위치 라인 레이아웃 -->
                         <LinearLayout
-                            android:layout_marginRight="8dp"
-                            android:layout_gravity="bottom"
-                            android:orientation="horizontal"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center_vertical">
+                            android:layout_gravity="bottom"
+                            android:layout_marginRight="8dp"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
+
                             <ImageView
                                 android:layout_width="15dp"
                                 android:layout_height="15dp"
-                                android:src="@android:color/holo_orange_dark" />
+                                android:src="@drawable/location" />
+
                             <TextView
                                 android:id="@+id/muck_Location"
                                 android:layout_width="wrap_content"
@@ -151,21 +159,24 @@
                                 android:layout_marginLeft="5dp"
                                 android:text="서울시 성동구 한양여대"
                                 android:textSize="14dp" />
+
                             <View
-                                android:layout_weight="7"
                                 android:layout_width="0dp"
-                                android:layout_height="0dp"/>
+                                android:layout_height="0dp"
+                                android:layout_weight="7" />
+
                             <ImageView
-                                android:src="@drawable/ic_launcher_background"
                                 android:layout_width="14dp"
-                                android:layout_height="14dp"/>
+                                android:layout_height="14dp"
+                                android:src="@drawable/number_people" />
+
                             <TextView
                                 android:id="@+id/muck_TotalMember"
-                                android:textSize="14dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
                                 android:text="1/5"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"/>
+                                android:textSize="14dp" />
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
