--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -42,9 +42,9 @@
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
                 <ImageView
-                    android:src="@android:color/holo_blue_bright"
+                    android:src="@drawable/setting"
                     android:layout_width="30dp"
-                    android:layout_height="30dp"/>
+                    android:layout_height="25dp"/>
 
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
@@ -66,7 +66,7 @@
                     android:layout_height="wrap_content">
                     <ImageView
                         android:id="@+id/userProfile_ProfilePic"
-                        android:src="@android:color/holo_green_light"
+                        android:src="@drawable/profile_default"
                         android:layout_width="90dp"
                         android:layout_height="90dp"/>
                     <LinearLayout
@@ -108,7 +108,7 @@
                             android:layout_weight="0"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
-                            android:src="@android:color/holo_blue_bright" />
+                            android:src="@drawable/profile_default" />
 
                         <LinearLayout
                             android:layout_width="fill_parent"
@@ -147,7 +147,7 @@
                                 <ImageView
                                     android:layout_width="15dp"
                                     android:layout_height="15dp"
-                                    android:src="@android:color/holo_orange_dark" />
+                                    android:src="@drawable/location" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -201,7 +201,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
                             <ImageView
-                                android:src="@android:color/holo_orange_light"
+                                android:src="@drawable/replies"
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"/>
                             <TextView
@@ -218,7 +218,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
                             <ImageView
-                                android:src="@android:color/holo_orange_light"
+                                android:src="@drawable/likes"
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"/>
                             <TextView
@@ -235,7 +235,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
                             <ImageView
-                                android:src="@android:color/holo_orange_light"
+                                android:src="@drawable/pictures"
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"/>
                             <TextView
@@ -250,7 +250,7 @@
                             android:layout_height="0dp"
                             android:layout_weight="1"/>
                         <ImageView
-                            android:src="@android:color/holo_green_light"
+                            android:src="@drawable/bookmark"
                             android:layout_width="25dp"
                             android:layout_height="25dp"/>
 
@@ -271,7 +271,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginRight="20dp"
         android:backgroundTint="#f78025"
-        android:src="@drawable/write"
+        android:src="@drawable/write_feed"
         app:borderWidth="0dp"
         app:fabSize="normal"/>
 
